vlib/v/checker/tests/unknown_generic_type.out
vlib/v/checker/tests/unknown_generic_type.vv:5:13: error: unknown type `Foo`
    3 |
    4 | fn main() {
    5 |     x := decode<Foo>('{"name": "test"}')?
      |                ~~~~~
    6 |     println(x)
    7 | }
