vlib/v/checker/tests/unknown_generic_type.vv
fn decode<T>(raw_data string) ?T {
}

fn main() {
	x := decode<Foo>('{"name": "test"}')?
	println(x)
}
